# vamita

./: Cargo.toml  README.md  build_web.sh  index.html
.github/workflows/: deploy-pages.yml
gense/: Cargo.toml  README.md
gense/examples/: bomb.rs  defeat.rs  exp.rs  hit.rs  hit_self.rs  render_to_wav.rs  shoot.rs
gense/src/: effect.rs  emitter.rs  envelope.rs  granular.rs  lib.rs  oscillator.rs
src/: audio.rs  components.rs  constants.rs  main.rs  menu.rs  persist.rs  resources.rs  splash.rs
src/game/: combat.rs  components.rs  constants.rs  enemy.rs  events.rs  experience.rs  input.rs  mod.rs  movement.rs  pause.rs  player.rs  powerup.rs  resources.rs  state.rs  ui.rs
src/systems/: combat.rs  input.rs  mod.rs  movement.rs  setup.rs  state.rs  ui.rs
