[package]
name = "vamita"
version = "0.1.0"
edition = "2024"
description = "A tiny Vampire-Survivors-like built with Bevy"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
license = "MIT"

[dependencies]
bevy = { version = "0.17", features = ["wav", "mp3"] }
rand = "0.9"
#blake3 = { version = "1.5", features=["pure"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
members = [
  "gense",
]
